--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,12 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Libraries versions
+kotlinVersion=1.9.23
+ktorVersion=2.3.9
+serializationVersion=1.6.3
+navVersion=2.7.7
+lifecycleVersion=2.7.0
+hiltVersion=2.51.1
+roomVersion=2.6.1
